--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
         <h5 class="separator">Who I Am</h5>
         <div class="about">
-            <img src="assets/HeroImage.png" alt="">
+            <img src="HeroImage.png" alt="">
             <div class="info">
                 <h3>About Me</h3>
                 <p>
