--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
         
         <ul>
             <li>
-                <a href="C:\Users\Mohammed Afreed\Desktop\Teaching\index.html">Home</a>
+                <a href="C:\Users\Mohammed Afreed\Desktop\internship\index.html">Home</a>
             </li>
             <li>
                 <a href="#">Skills</a>
@@ -25,10 +25,10 @@
                 <a href="#">Cirtifications</a>
             </li>
            <li>
-                    <a href="#">Contact</a>
+                    <a href="#"  style="text-decoration: underline;">Contact</a>
            </li>
             <li>
-                <a href="C:\Users\Mohammed Afreed\Desktop\Teaching\about.html">About</a>
+                <a href="C:\Users\Mohammed Afreed\Desktop\internship\about.html">About</a>
             </li>
         </ul>
     </div>
