--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h2>Afreed Codes</h2>
             <ul>
                 <li>
-                    <a href="">Home</a>
+                    <a href="" style="text-decoration: underline;">Home</a>
                 </li>
                 <li>
                     <a href="#">Skills</a>
@@ -25,10 +25,10 @@
                 </li>
 
                 <li>
-                    <a href="C:\Users\Mohammed Afreed\Desktop\Teaching\contact.html">Contact</a>
+                    <a href="C:\Users\Mohammed Afreed\Desktop\internship\contact.html">Contact</a>
                 </li>
                 <li>
-                    <a href="C:\Users\Mohammed Afreed\Desktop\Teaching\about.html">About</a>
+                    <a href="C:\Users\Mohammed Afreed\Desktop\internship\about.html">About</a>
                 </li>
             </ul>
             <button class="hire-btn">Hire Me</button>
