--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
         
         <ul>
             <li>
-                <a href="C:\Users\Mohammed Afreed\Desktop\internship\portfolio\index.html">Home</a>
+                <a href="C:\Users\Mohammed Afreed\Desktop\internship\index.html">Home</a>
             </li>
             <li>
                 <a href="#">Skills</a>
@@ -28,7 +28,7 @@
                     <a href="#"  style="text-decoration: underline;">Contact</a>
            </li>
             <li>
-                <a href="C:\Users\Mohammed Afreed\Desktop\internship\portfolio\about.html">About</a>
+                <a href="C:\Users\Mohammed Afreed\Desktop\internship\about.html">About</a>
             </li>
         </ul>
     </div>
