--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                 </li>
 
                 <li>
-                    <a href="C:\Users\Mohammed Afreed\Desktop\internship\portfolio\contact.html">Contact</a>
+                    <a href="C:\Users\Mohammed Afreed\Desktop\internship-1\contact.html">Contact</a>
                 </li>
                 <li>
-                    <a href="C:\Users\Mohammed Afreed\Desktop\internship\portfolio\about.html">About</a>
+                    <a href="C:\Users\Mohammed Afreed\Desktop\internship-1\about.html">About</a>
                 </li>
             </ul>
             <button class="hire-btn">Hire Me</button>
@@ -144,7 +144,7 @@
                 </div>
                 <div class="col">
                     <div class="about-col">
-                        <h3>Shashank</h3>
+                        <h3>Mohammed Afreed Pasha</h3>
                         <p>Full Stack Developer</p>
                     </div>
                     <div class="links-col">
