--- a/index.html
+++ b/index.html
@@ -12,23 +12,17 @@
             <h2>Afreed Codes</h2>
             <ul>
                 <li>
-                    <a href="" style="text-decoration: underline;">Home</a>
+                    <a href="#" style="text-decoration: underline;">Home</a>
                 </li>
                 <li>
-                    <a href="#">Skills</a>
-                </li>
-                <li>
-                    <a href="#">Portfolio</a>
-                </li>
-                <li>
-                    <a href="#">Cirtifications</a>
+                    <a href="certifications.html">Cirtifications</a>
                 </li>
 
                 <li>
-                    <a href="C:\Users\Mohammed Afreed\Desktop\internship-1\contact.html">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </li>
                 <li>
-                    <a href="C:\Users\Mohammed Afreed\Desktop\internship-1\about.html">About</a>
+                    <a href="education.html">Education</a>
                 </li>
             </ul>
             <button class="hire-btn">Hire Me</button>
@@ -45,41 +39,11 @@
       faster
             </p>
         </div>
-        <div class="main-section2">
-            <div class="item">
-                <div class="icon">
-                    <i class="bx bx-check-shield"></i>
-                </div>
-                <div class="info">
-                    <h3>+3 Years of Experiences</h3>
-                </div>
-                <i class="bx bx-chevron-right"></i>
-            </div>
-            <div class="item">
-                <div class="icon">
-                    <i class="bx bx-check-circle"></i>
-                </div>
-                <div class="info">
-                    <h3>+20</h3>
-                    <p>Completed Projects</p>
-                </div>
-                <i class="bx bx-chevron-right"></i>
-            </div>
-            <div class="item">
-                <div class="icon">
-                    <i class="bx bx-laugh"></i>
-                </div>
-                <div class="info">
-                    <h3>10+</h3>
-                    <p>Awesome Projects</p>
-                </div>
-                <i class="bx bx-chevron-right"></i>
-            </div>
-        </div>
+        
         <h5 class="separator">Who I Am</h5>
         <div class="about">
             <img src="HeroImage.png" alt="">
-            <div class="info">
+            <!-- <div class="info">
                 <h3>About Me</h3>
                 <p>
                     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo
@@ -91,7 +55,7 @@
         eveniet corrupti ratione consequuntur veniam, porro debitis placeat!
                 </p>
                 <button class="hire-btn">Hire Me</button>
-            </div>
+            </div> -->
         </div>
         <h5 class="separator">My Skills</h5>
         <div class="skills">
@@ -104,7 +68,7 @@
           efforts.
                     </p>
                 </div>
-                <button class="hire-btn">Hire Me</button>
+                <!-- <button class="hire-btn">Hire Me</button> -->
             </div>
             <div class="right">
                 <div class="item">
@@ -140,37 +104,24 @@
                 <div class="start">
                     <h3>Start a Project</h3>
                     <p>Interested in working togther? Let us talk about it</p>
-                    <button>Let's Do That!</button>
+                    <button >Let's Do That!</button>
                 </div>
                 <div class="col">
                     <div class="about-col">
                         <h3>Mohammed Afreed Pasha</h3>
                         <p>Full Stack Developer</p>
                     </div>
-                    <div class="links-col">
-                        <h4>Useful Links</h4>
-                        <a href="#">Home</a>
-                        <a href="#">About</a>
-                        <a href="#">Skills</a>
-                        <a href="#">Portfolio</a>
-                        <a href="#">Contact</a>
-                    </div>
+                   
                     <div class="links-col">
                         <h4>Follow Me</h4>
-                        <a href="#">
-                            <i class="bx bxl-facebook"></i>
+                        <a href="https://github.com/afreed007">
+                            <i class="bx bxl-github"></i>
                         </a>
-                        <a href="#">
-                            <i class="bx bxl-twitter"></i>
-                        </a>
-                        <a href="#">
+                        <a href="https://www.instagram.com/__afreed007__/">
                             <i class="bx bxl-instagram"></i>
                         </a>
-                        <a href="#">
+                        <a href="www.linkedin.com/in/mohammed-afreed-pasha-405965289">
                             <i class="bx bxl-linkedin"></i>
-                        </a>
-                        <a href="#">
-                            <i class="bx bxl-youtube"></i>
                         </a>
                     </div>
                     <div class="news-col">
