--- a/certifications.html
+++ b/certifications.html
@@ -14,7 +14,7 @@
                     <a href="index.html" >Home</a>
                 </li>
                 <li>
-                    <a href=#" style="text-decoration: underline;">Cirtifications</a>
+                    <a href=#" style="text-decoration: underline;">Certifications</a>
                 </li>
 
                 <li>
