--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
                     <a href="index.html" >Home</a>
                 </li>
                 <li>
-                    <a href="certifications.html">Cirtifications</a>
+                    <a href="certifications.html">Certifications</a>
                 </li>
 
                 <li>
