--- a/education.html
+++ b/education.html
@@ -15,7 +15,7 @@
                 <a href="index.html" >Home</a>
             </li>
             <li>
-                <a href="certifications.html">Cirtifications</a>
+                <a href="certifications.html">Certifications</a>
             </li>
 
             <li>
