--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <a href="#" style="text-decoration: underline;">Home</a>
                 </li>
                 <li>
-                    <a href="certifications.html">Cirtifications</a>
+                    <a href="certifications.html">Certifications</a>
                 </li>
 
                 <li>
