--- a/certifications.html
+++ b/certifications.html
@@ -29,7 +29,7 @@
         <div class="cer-main">
         <h1>Certifications</h1>
         <div class="cer">
-        <h2>LueurTech Soloutions Internship</h2>
+        <h2>LueurTech Solutions Internship</h2>
         <img src="intership.jpg" alt="">
         <h2>AWS Certification</h2>
         <img src="aws.jpg" alt=""></div>
