--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="info">
                     <h3>What My Programming Skills are?</h3>
                     <p>
-                        I develop great, interactive and smooth user interfacese that helps
+                        I develop great, interactive and smooth user interfaces that helps
           users to get on board and done with things in lesser time and
           efforts.
                     </p>
